@@ -3,7 +3,7 @@
         * Version 1.1.0 released
         =========================
 
-        Add GFilename methods and remove equivalents from GTools
+        Add GFilename methods and remove equivalents from GTools (#1666)
         Use column names for CTA response table access (#1656)
         Add non-const GObservation::events() method (#1664)
         Remove event fetching from GCTAObservation class (#1648)
